src/test/ui/feature-gates/feature-gate-nll.stderr
error[E0502]: cannot borrow `*x.1` as immutable because it is also borrowed as mutable
  --> $DIR/feature-gate-nll.rs:15:13
   |
LL |     let m = &mut x;
   |             ------ mutable borrow occurs here
LL |     let p = &*x.1;
   |             ^^^^^ immutable borrow occurs here
LL |
LL |     m;
   |     - mutable borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0502`.
